# vlm-semantic-spatial-perception

./: .env.example  .gitignore  AGENTS.md  PDDL_ACTION_FORMATTING_FIX.md  PREDICATE_VALIDATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  README.md  demo_freeze.sh  detections_20251107_113657.json  detections_20251107_125903.json  detections_20251107_131314.json  gtamp-update-plan.md  output.txt  pyproject.toml  required_validation_format.md  requirements.txt  setup.py  success_rates.txt  test_task_analyzer.py
agents/: KINEMATICS_PRIMITIVES_NOTES.md  MIGRATION_JOURNAL.md  MIGRATION_PLAN.md  PERCEPTION_EXTENSIONS.md  README.md
agents/design/: architecture.md  orchestrator_observation_snapshot_plan.md  primitive_task_breakdown_plan.md  prompts_configuration.md
agents/journal/: 2025-11-21.md  2025-11-22.md  2025-11-23.md  2025-11-24.md  2025-12-01.md  2025-12-02.md  2025-12-03.md  2025-12-07.md  README.md
agents/operations/: playbook.md
config/: camera_config.yaml  gemini.yaml  gemini_config.yaml  layered_domain_generator_prompts.yaml  llm_task_analyzer_prompts.yaml  llm_task_analyzer_prompts_lmh.yaml  llm_task_analyzer_prompts_predicates.yaml  object_tracker_prompts.yaml  orchestrator_config.py  pddl_domain_maintainer_prompts.yaml  perception_config.yaml  primitive_descriptions.md  prompts_config.yaml  skill_decomposer_prompts.yaml  vlm_config.yaml
docs/: GEMINI_INTEGRATION.md  ORCHESTRATOR.md  PDDL_REPRESENTATION.md  README.md  camera.md  dependency_audit.md  detection_phase_analysis.md  object_reidentification_plan.md  object_tracker_performance_analysis.md  pddl_solver_integration.md  perception.md  planning.md  tamp_system.md  validation_checks.md  validation_checks_impl.md
envs/: unitree.yml
examples/: README.md  continuous_pddl_integration_demo.py  continuous_pddl_simple_demo.py  dynamic_pddl_demo.py  gemini_robotics_example.py  genai_viewer.py  grounded_sam2_interactive_inspect.py  grounded_sam2_realsense_demo.py  grounded_sam2_realsense_ram_demo.py  grounded_sam2_tracking_camera_with_continuous_id.py  object_tracker_demo.py  orchestrator_demo.py  pddl_predicate_tracking_demo.py  pddl_representation_demo.py  pddl_solver_demo.py  perception_predicate_demo.py  run_layered_pddl_demo.py  run_orchestrator_sim_demo.py  run_stretch_sim_demo.py  sample_detections.json  side_orientation_demo.py  simple_demo.py  tamp_demo.py  task_monitoring_demo.py  test_exploratory_actions.py  test_gemini_detection.py  test_genai_interface.py  test_layered_pddl_pipeline.py  test_observe_action.py  test_orchestrator_solver.py  test_predicate_validation.py  test_skill_execution.py  test_stretch_primitives.py  test_tamp_integration.py  test_wipe_primitive.py  visualize_perception.py  visualize_snapshot.py  visualize_tamp_execution.py
scripts/: affordance_viz.py  benchmark_saved_world.py  capture_live_world.py  decompose_pddl_action.py  replay_cached_demo.py  reset_xarm.py  run_cached_plan.py  run_unitree.sh  test_b1_z1.py  test_b1z1_urdf.py  test_clearance_corridors_pybullet.py  test_clutter_planning.py  test_clutter_planning_realsense.py  test_clutter_planning_realsense_robot.py  test_grasp_sampling.py  test_molmo_point.py  test_motion_planning.py  test_obstructed_fridge_sim.py  test_perception_components.py  test_perception_realsense.py  test_xarm_pybullet_primitives.py  test_xarm_real_pybullet_planned_primitives.py  visualize_world_affordances.py
src/: __init__.py  task_motion_planner.py
src/camera/: __init__.py  base_camera.py  camera_utils.py  realsense_camera.py  realsense_camera_old.py  webcam_camera.py
src/grasp_planner/: __init__.py  grasp_candidate.py  grasp_planner.py
src/kinematics/: __init__.py  b1_robot_interface.py  b1_z1_system.py  b1_z1_transform_calculator.py  base_pybullet_interface.py  depth_environment_collider.py  stretch_pybullet_interface.py  xarm_curobo_interface.py  xarm_pybullet_interface.py  xarm_pybullet_planned_primitives.py  xarm_robot_adapter.py  z1_robot_interface.py
src/llm_interface/: __init__.py  base.py  google_genai.py  openai_client.py  qwen3vl.py
src/perception/: README.md  __init__.py  clearance.py  contact_graph.py  continuous_tracker.py  gemini_robotics.py  gsam2_object_tracker.py  llm_contact_classifier.py  molmo_interaction_point_detector.py  molmo_point_detector.py  object_registry.py  object_tracker.py  occlusion.py  surface_map.py  vlm_detector.py
src/planning/: __init__.py  clutter_module.py  conditional_task_executor.py  domain_knowledge_base.py  dynamic_pddl_generator.py  hybrid_planner.py  pddl_solver.py  (+6 more)
tests/: conftest.py  test_basic_integration.py  test_pick_decomposition_llm.py  test_pick_translation_to_xarm.py  test_primitive_executor.py  test_representation_builder_migration.py  test_skill_plan_types.py  test_xarm_pybullet_planned_primitives.py
(+130 files in other folders)
